--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "^2.0.5",
     "@adonisjs/cors": "^1.0.7",
+    "@adonisjs/drive": "^1.0.2",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
@@ -27,9 +28,11 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
+    "@slynova/flydrive": "^0.3.1",
     "filesize": "^4.1.2",
     "mysql": "^2.17.1",
-    "sqlite3": "^4.0.8"
+    "sqlite3": "^4.0.8",
+    "create-output-stream":"*"
   },
   "devDependencies": {},
   "autoload": {
