--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "filesize": "^4.1.2",
     "mysql": "^2.17.1",
     "sqlite3": "^4.0.8",
-    "create-output-stream":"*"
+    "create-output-stream":"*",
+    "indicative":"*"
   },
   "devDependencies": {},
   "autoload": {
