'在hook上生成分页器'

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mysql": "^2.17.1",
     "sqlite3": "^4.0.8",
     "create-output-stream":"*",
-    "indicative":"*"
+    "indicative":"*",
+    "lodash":"*"
   },
   "devDependencies": {},
   "autoload": {
