--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/mail": "*",
     "@slynova/flydrive": "^0.3.1",
     "filesize": "^4.1.2",
     "mysql": "^2.17.1",
