--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@adonisjs/ace": "^5.0.8",
+    "@adonisjs/antl": "^2.0.5",
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "^2.0.5",
     "@adonisjs/cors": "^1.0.7",
@@ -25,17 +26,18 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^3.0.5",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
-    "@adonisjs/mail": "*",
+    "@adonisjs/websocket": "^1.0.9",
     "@slynova/flydrive": "^0.3.1",
     "filesize": "^4.1.2",
     "mysql": "^2.17.1",
     "sqlite3": "^4.0.8",
     "create-output-stream":"*",
     "indicative":"*",
-    "lodash":"*"
+    "lodash":"^4.17.5"
   },
   "devDependencies": {},
   "autoload": {
