--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "browser-sync": "./node_modules/.bin/gulp browser-sync"
   },
   "keywords": [
     "adonisjs",
@@ -39,7 +40,10 @@
     "indicative":"*",
     "lodash":"^4.17.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1"
+  },
   "autoload": {
     "App": "./app"
   }
